# tradecraft-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
src/tradecraft_mcp/: __init__.py  __main__.py  auth.py  config.py  server.py
src/tradecraft_mcp/prompts/: __init__.py  domain_investigation.py  general_osint.py  person_investigation.py  threat_assessment.py
src/tradecraft_mcp/tools/: __init__.py  domain_recon.py  email_identity.py  threat_intel.py  web_social.py
tests/: conftest.py  test_auth.py  test_domain_recon.py  test_email_identity.py  test_threat_intel.py  test_web_social.py
