[project]
name = "tradecraft-mcp"
version = "0.1.0"
description = "OSINT tradecraft toolkit exposed as an MCP server"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "aiohttp",
    "dnspython",
    "asyncwhois",
    "beautifulsoup4",
    "lxml",
    "shodan",
]

[project.scripts]
tradecraft-mcp = "tradecraft_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradecraft_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
]
